Enforce Java 17 API in Gradle. Fixes #36